# Vulkan

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
android/examples/cpuparticles/: CMakeLists.txt  build.gradle
android/examples/debugutils/: build.gradle
autotest/: autoTestGenerateGolden.bat
base/: VulkanDebug.cpp  VulkanDevice.cpp  VulkanDevice.h  VulkanInitializers.hpp  VulkanRaytracingSample.cpp  VulkanRaytracingSample.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanUIOverlay.cpp  VulkanUIOverlay.h  VulkanglTFModel.h  camera.hpp  vulkanexamplebase.cpp  vulkanexamplebase.h
data/models/: cornellBoxWithPunctualLightsDoesNotWorkRight.gltf  cornellBox_used_for_comparison_gen_vs_ref.gltf  lucy.mtl  sphere.gltf
data/shaders/distancefieldfonts/: msdf.frag  msdf.frag.spv  msdf.vert  msdf.vert.spv
data/shaders/glsl/common/: gltfMaterial.h  gltfModelDesc.h  sceneUbo.h
data/shaders/glsl/conditionalrender/: model.vert  model.vert.spv
data/shaders/glsl/conservativeraster/: fullscreen.frag  fullscreen.frag.spv  triangle.frag.spv  triangle.vert  triangle.vert.spv  triangleoverlay.frag.spv
data/shaders/glsl/cpuparticles/: normalmap.frag  normalmap.vert  normalmap.vert.spv  particle.frag  particle.vert.spv
data/shaders/glsl/debugutils/: colorpass.vert.spv  postprocess.frag  postprocess.frag.spv  postprocess.vert.spv  toon.frag  toon.frag.spv  toon.vert.spv
data/shaders/glsl/descriptorindexing/: descriptorindexing.frag  descriptorindexing.frag.spv  descriptorindexing.vert
data/shaders/glsl/displacement/: base.frag.spv  displacement.tesc  displacement.tesc.spv  displacement.tese  displacement.tese.spv
data/shaders/glsl/geometryshader/: normaldebug.geom  normaldebug.geom.spv
data/shaders/glsl/inlineuniformblocks/: inlineuniformblocks.vert  inlineuniformblocks.vert.spv
data/shaders/glsl/meshshaders/: meshshader.frag  meshshader.mesh  meshshader.task  skybox.vert
data/shaders/glsl/multiview/: multiview.frag  multiview.frag.spv  viewdisplay.frag  viewdisplay.frag.spv  viewdisplay.vert  (+1 more)
data/shaders/hlsl/: README.md
examples/: CMakeLists.txt
examples/conditionalrender/: conditionalrender.cpp
examples/conservativeraster/: conservativeraster.cpp
examples/cpuparticles/: cpuparticles.cpp
examples/debugutils/: debugutils.cpp
examples/descriptorindexing/: descriptorindexing.cpp
examples/displacement/: displacement.cpp
examples/distancefieldfonts/: distancefieldfonts.cpp
examples/geometryshader/: geometryshader.cpp
examples/gl_vk_interop/: gl_vk_interop.cpp  gl_vk_interop.h  gl_vk_interop_nv.cpp  main.cpp
examples/gl_vk_interop_kh/: GlExtensions.cpp  GlExtensions.h  QuadRendering.cpp  QuadRendering.h  README.md  RenderToTexture.cpp  RenderToTexture.h  gl_vk_interop_kh.cpp  gl_vk_interop_kh.h  main.cpp  quad_ps.glsl  quad_vs.glsl
examples/gl_vk_interop_nv/: GlExtensions.cpp  README.md  gl_vk_interop_nv.cpp
examples/gltfloading/: gltfloading.cpp
examples/gltfscenerendering/: gltfscenerendering.cpp  gltfscenerendering.h
examples/gltfskinning/: gltfskinning.cpp  gltfskinning.h
examples/imgui/: main.cpp
examples/inlineuniformblocks/: inlineuniformblocks.cpp
examples/instancing/: instancing.cpp
examples/meshshaders/: README.md  main.cpp  meshshaders.cpp  meshshaders.h
examples/multisampling/: multisampling.cpp
examples/multiview/: multiview.cpp
examples/negativeviewportheight/: negativeviewportheight.cpp
examples/occlusionquery/: occlusionquery.cpp
examples/offscreen/: offscreen.cpp
examples/oit/: oit.cpp
examples/parallaxmapping/: parallaxmapping.cpp
examples/particlefire/: particlefire.cpp
examples/pbrbasic/: pbrbasic.cpp
examples/pbribl/: pbribl.cpp
examples/pbrtexture/: pbrtexture.cpp
examples/pipelines/: pipelines.cpp
examples/pipelinestatistics/: pipelinestatistics.cpp
examples/pushconstants/: pushconstants.cpp
examples/pushdescriptors/: pushdescriptors.cpp
examples/rayquery/: rayquery.cpp
examples/raytracing/: main.cpp  raytracing.cpp  raytracing.h
examples/raytracingbasic/: raytracingbasic.cpp
examples/raytracingcallable/: raytracingcallable.cpp
examples/raytracingreflections/: raytracingreflections.cpp
examples/raytracingshadows/: raytracingshadows.cpp
examples/screenshot/: screenshot.cpp
examples/shadowmapping/: shadowmapping.cpp
examples/specializationconstants/: specializationconstants.cpp
examples/ssao/: ssao.cpp
examples/stencilbuffer/: stencilbuffer.cpp
examples/subpasses/: subpasses.cpp
examples/terraintessellation/: terraintessellation.cpp
examples/tessellation/: tessellation.cpp
examples/textoverlay/: textoverlay.cpp
examples/texture/: texture.cpp
examples/texture3d/: texture3d.cpp
examples/texturearray/: texturearray.cpp
examples/texturecubemap/: texturecubemap.cpp
examples/texturecubemaparray/: texturecubemaparray.cpp
examples/texturemipmapgen/: texturemipmapgen.cpp
examples/texturesparseresidency/: texturesparseresidency.cpp  texturesparseresidency.h
examples/tutorial/: Buffer.cpp  Buffer.h  Device.cpp  Device.h  Shader.h  Texture.h  VulkanGltf.cpp  VulkanGltf.h  VulkanInitializers.h  main.cpp  tutorial.cpp  tutorial.h
examples/tutorial_raytracing/: main.cpp  tutorial_raytracing.cpp  tutorial_raytracing.h
examples/variablerateshading/: variablerateshading.cpp  variablerateshading.h
examples/viewportarray/: viewportarray.cpp
examples/vulkanscene/: vulkanscene.cpp
genesis/: AccelerationStructure.cpp  AccelerationStructure.h  Benchmark.h  Blas.cpp  Blas.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Cell.cpp  Cell.h  CellManager.cpp  CellManager.h  CommandLinerParser.cpp  CommandLinerParser.h  Device.cpp  Device.h  GenAssert.h  GenMath.h  GlExtensions.cpp  GlExtensions.h  Image.cpp  Image.h  ImageTransitions.cpp  ImageTransitions.h  IndirectLayout.cpp  IndirectLayout.h  Instance.cpp  Instance.h  InstanceContainer.cpp  InstanceContainer.h  ModelInfo.cpp  ModelInfo.h  ModelRegistry.cpp  ModelRegistry.h  NonIndirectLayout.cpp  NonIndirectLayout.h  PhysicalDevice.cpp  PhysicalDevice.h  (+42 more)
(+264 files in other folders)
